Cohesity Software Engineer (2-5 years) R00338

--- a/experience.tex
+++ b/experience.tex
@@ -4,21 +4,19 @@
     {Siemens Healthineers}{Bangalore, India}
     {Software Engineer 1}{July 2023 -- Present}
     \resumeItemListStart
-      \resumeItem{\textbf{Owned end‑to‑end design \& architecture} for components in a mission‑critical medical imaging platform; translated product specs into \textbf{high‑level} and \textbf{low‑level} designs enabling reliable releases.}
-      \resumeItem{\textbf{Applied algorithms \& data structures} to optimize imaging workflows and concurrency in microservices; improved throughput and latency under real‑world workloads.}
-      \resumeItem{\textbf{Modeled data schemas} (PostgreSQL/MySQL) and designed class hierarchies using \textbf{OOP \& design patterns}; reduced coupling and improved testability.}
-      \resumeItem{\textbf{Developed RESTful services} and integration endpoints; standardized serialization and secure communication across Linux/Unix deployments.}
-      \resumeItem{\textbf{Drove CI/CD} on Azure DevOps/AWS, reduced deployment cycles by 40\%; introduced static analysis with \textbf{SonarQube} improving code quality metrics by 25\%.}
-      \resumeItem{\textbf{Led code reviews, design reviews, and architecture discussions}; mentored interns and collaborated cross‑functionally in \textbf{Agile/SDLC} to deliver on‑time.}
-      \resumeItem{\textbf{Diagnosed performance bottlenecks} across compute/memory/I/O; implemented profiling‑driven fixes to ensure high throughput and reliability.}
+      \resumeItem{\textbf{Architected and optimized high-throughput distributed services} (C++/Go) handling TBs of streaming data; engineered custom memory allocators and lock-free structures to reduce latency by \textbf{40\%}.}
+      \resumeItem{\textbf{Implemented robust fault-tolerance mechanisms} including circuit breakers, exponential backoff, and idempotent consumers, ensuring \textbf{99.99\%} system availability in distributed pipelines.}
+      \resumeItem{\textbf{Designed scalable ingestion pipelines} and storage layers; optimized I/O patterns for throughput and implemented data validation frameworks for large-scale datasets using reactive patterns.}
+      \resumeItem{\textbf{Enhanced system observability} with distributed tracing and structured logging; developed internal CLI tools for cluster management and automated recovery, improving engineering velocity.}
+      \resumeItem{\textbf{Orchestrated containerized microservices deployments} on Linux/Azure and drove Agile delivery.}
     \resumeItemListEnd
 
   \resumeSubheading
     {Siemens Healthineers}{Bangalore, India}
     {Software Engineer Intern}{February 2023 -- July 2023}
     \resumeItemListStart
-      \resumeItem{Contributed to \textbf{scalable infrastructure} and backend modules; implemented \textbf{REST APIs}, data models, and unit/integration tests in an Agile environment.}
-      \resumeItem{Automated developer workflows and CI tasks; participated in \textbf{code/design reviews}, improving maintainability and on‑time delivery; achieved \textbf{60\%} process time savings.}
+      \resumeItem{Implemented \textbf{REST APIs} and data models in C\#; contributed to ingestion/validation modules and unit/integration tests.}
+      \resumeItem{Automated developer workflows and CI tasks; participated in \textbf{synchronous code/design reviews}, improving maintainability and on‑time delivery; achieved \textbf{60\%} process time savings.}
     \resumeItemListEnd
 
   \resumeSubheading
