--- a/projects.tex
+++ b/projects.tex
@@ -1,37 +1,23 @@
 \section{Projects}
 \resumeSubHeadingListStart
   \resumeProjectHeading
-    {\textbf{Order-Matching-Engine} (\href{https://github.com/CodeWreckPro/Order-Matching-Engine}{Github}) $|$ \emph{C++/C\#, Docker, AWS}}{}
+    {\textbf{High-Frequency Order Matching Engine} (\href{https://github.com/CodeWreckPro/Order-Matching-Engine}{Github}) $|$ \emph{C++, Docker, AWS}}{}
     \resumeItemListStart
-      \resumeItem{Implemented a high-performance trading engine with \textbf{algorithms \& data structures} for order books and price matching; designed \textbf{multithreaded} execution with concurrency controls.}
-      \resumeItem{Exposed \textbf{RESTful APIs}; containerized with Docker and deployed on AWS; followed \textbf{SDLC/Agile} and conducted \textbf{code reviews} for maintainability.}
+      \resumeItem{Engineered a low-latency trading engine in \textbf{C++} using \textbf{lock-free data structures} and custom memory management to minimize GC pauses; achieved sub-millisecond execution times.}
+      \resumeItem{Designed \textbf{multithreaded} architecture for concurrent order processing; containerized with Docker for scalable deployment and implemented resilient network I/O with retry policies.}
+    \resumeItemListEnd
+
+  \resumeProjectHeading
+    {\textbf{Secure Distributed Storage Utility} (\href{https://github.com/CodeWreckPro/AES_Encryption_and_Decryption_Script}{Github}) $|$ \emph{C++, Python, AES}}{}
+    \resumeItemListStart
+      \resumeItem{Built a secure file storage utility incorporating \textbf{AES-256} encryption and block-level deduplication; implemented chunked file processing for handling large datasets efficiently.}
+      \resumeItem{Designed modular key management and robust error handling for data integrity; optimized byte-level I/O performance for high-throughput file operations.}
     \resumeItemListEnd
 
   \resumeProjectHeading
     {\textbf{EchoLens – Code Analysis Tool} (\href{https://codewreckpro.github.io/Echelons_Code_Analysis_Tool/}{Live} $|$ \href{https://github.com/CodeWreckPro/Echelons_Code_Analysis_Tool}{Github}) $|$ \emph{AI, ML, 3D Visualization}}{}
     \resumeItemListStart
-      \resumeItem{Built platform to predict risks, detect technical debt, and visualize dependencies; implemented semantic commit analysis and ML‑based hotspot prediction.}
-      \resumeItem{Designed service interfaces and data models; drove \textbf{architecture discussions} and \textbf{design reviews}; delivered dashboards to guide refactoring.}
-    \resumeItemListEnd
-
-  \resumeProjectHeading
-    {\textbf{Med-Pilot} (\href{https://github.com/CodeWreckPro/Med-Pilot}{Github}) $|$ \emph{FastAPI, PostgreSQL, OpenAI}}{}
-    \resumeItemListStart
-      \resumeItem{Developed backend services with \textbf{RESTful APIs} and \textbf{PostgreSQL} data modeling; deployed on Linux; implemented semantic search using embeddings.}
-      \resumeItem{Integrated multi‑agent modules; \textbf{optimized queries \& indexing}; followed \textbf{Agile/SDLC}; ensured secure, scalable APIs and dashboards for clinical workflows.}
-    \resumeItemListEnd
-
-  \resumeProjectHeading
-    {\textbf{Secure File Encryption Utility} (\href{https://github.com/CodeWreckPro/AES_Encryption_and_Decryption_Script}{Github}) $|$ \emph{Python, AES}}{}
-    \resumeItemListStart
-      \resumeItem{Implemented encryption utility using \textbf{AES/CBC} with PKCS\#7 padding; designed modular key management and robust error handling.}
-      \resumeItem{Built CLI for usability; optimized performance for byte‑level operations; adhered to \textbf{coding standards} and maintainable design.}
-    \resumeItemListEnd
-
-  \resumeProjectHeading
-    {\textbf{Music Genre Classification} (\href{https://github.com/CodeWreckPro/Music_Genre_Classification}{Github}) $|$ \emph{Python, Librosa, scikit-learn}}{}
-    \resumeItemListStart
-      \resumeItem{Built ML pipeline for audio classification; implemented feature extraction and model training; achieved 67\% accuracy with cross‑validation.}
-      \resumeItem{Created evaluation visualizations; documented \textbf{design decisions} and experiment results to guide improvements.}
+      \resumeItem{Created an AI‑powered platform that predicts risks, detects technical debt, and visualizes dependencies; implemented ML‑based hotspot prediction and semantic commit analysis.}
+      \resumeItem{Developed pipelines for repository analysis; contributed to \textbf{architecture/design reviews}; delivered dashboards to guide refactoring and evaluation workflows.}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
