--- a/skills.tex
+++ b/skills.tex
@@ -1,14 +1,10 @@
 \section{Skills}
-\begin{itemize}[leftmargin=0.15in, label={}]
+\begin{itemize}[leftmargin=0.15in, label={}, itemsep=1pt, topsep=1pt, parsep=0pt, partopsep=0pt]
     \small{\item{
-     \textbf{Languages}{: Java, Go, C\#, C/C++, Python, SQL, Bash, PowerShell, JS} \\
-     \textbf{Core CS}{: Algorithms, Data Structures, Object‑Oriented Programming, Design Patterns, Low‑level Design} \\
-     \textbf{Frameworks}{: Spring Boot, .NET Core, Angular} \\
-     \textbf{Databases}{: PostgreSQL, MySQL, MongoDB, Redis} \\
-     \textbf{Data Modeling}{: ER modeling, schema design, normalization, indexing strategies} \\
-     \textbf{Cloud/DevOps}{: Docker, Git, CI/CD, Azure/AWS, Kubernetes (basics), Linux/Unix} \\
-     \textbf{Testing}{: Playwright, Selenium, NUnit/xUnit, integration testing, contract testing} \\
-     \textbf{Practices}{: SDLC (Agile), code reviews, design reviews, architecture discussions} \\
-     \textbf{Libraries/Tools}{: IntelliJ IDEA, Visual Studio, Jupyter, NumPy, Pandas, OpenCV, scikit‑learn}
+     \textbf{Languages}{: C++, Golang, C\#, Python, SQL, Bash, PowerShell, C, Java} \\
+     \textbf{Distributed Systems}{: Consistency Models, Sharding, Replication, Consensus Protocols, Fault Tolerance, Microservices} \\
+     \textbf{Storage \& Data}{: File Systems (NFS/SMB), Object Storage, Deduplication, Data Protection, PostgreSQL, Redis} \\
+     \textbf{High Performance}{: Multithreading, Lock-free Data Structures, Async I/O, Memory Management, Profiling} \\
+     \textbf{Cloud \& Tools}{: Docker, Kubernetes, AWS/Azure, CI/CD, Linux/Windows, Agile/SDLC, System Design}
     }}
 \end{itemize}
