--- a/summary.tex
+++ b/summary.tex
@@ -1,2 +1,2 @@
 \section{Summary}
-Results-oriented Software Engineer with expertise in C\#, .NET Core, Angular, and AWS, specializing in scalable full-stack and cloud-native solutions. Skilled in designing secure data pipelines, RESTful APIs, and Docker-based deployments, with additional strengths in computer vision, machine learning, and high-performance computing. Adept at Agile collaboration and passionate about applying advanced technologies to deliver innovative, enterprise-grade healthcare applications.
+Software Engineer specializing in \textbf{Distributed Systems}, \textbf{Data Protection}, and \textbf{High-Performance Infrastructure}. Proficient in \textbf{C++}, \textbf{Golang}, and \textbf{C\#}, with deep experience in building scalable storage services and streaming data pipelines. Expert in multithreading, asynchronous I/O, and resilient system design (circuit breakers, consistency models). Strong background in systems programming, file system concepts, and cloud-native architectures. Deploys reliably across Linux/Windows, Docker, Kubernetes, and Cloud platforms.
