--- a/resume.tex
+++ b/resume.tex
@@ -32,7 +32,7 @@
 \addtolength{\evensidemargin}{-0.5in}
 \addtolength{\textwidth}{1in}
 \addtolength{\topmargin}{-.5in}
-\addtolength{\textheight}{1.15in}
+\addtolength{\textheight}{1.0in}
 
 \urlstyle{same}
 
@@ -83,7 +83,7 @@
     \href{https://www.linkedin.com/in/rakshith-s-2k01/}{\underline{LinkedIn}} $|$
     \href{https://github.com/CodeWreckPro}{\underline{Github}} $|$
     \href{https://portfolio-website-jet-beta.vercel.app/}{\underline{Portfolio}}
-\end{center}
+\end{center}\vspace{-10pt}
 
 \input{experience}
 \input{skills}
