--- a/experience.tex
+++ b/experience.tex
@@ -4,11 +4,11 @@
     {Siemens Healthineers}{Bangalore, India}
     {Software Engineer 1}{July 2023 -- Present}
     \resumeItemListStart
-      \resumeItem{\textbf{Architected and optimized high-throughput distributed services} (C++/Go) handling TBs of streaming data; engineered custom memory allocators and lock-free structures to reduce latency by \textbf{40\%}.}
-      \resumeItem{\textbf{Implemented robust fault-tolerance mechanisms} including circuit breakers, exponential backoff, and idempotent consumers, ensuring \textbf{99.99\%} system availability in distributed pipelines.}
-      \resumeItem{\textbf{Designed scalable ingestion pipelines} and storage layers; optimized I/O patterns for throughput and implemented data validation frameworks for large-scale datasets using reactive patterns.}
-      \resumeItem{\textbf{Enhanced system observability} with distributed tracing and structured logging; developed internal CLI tools for cluster management and automated recovery, improving engineering velocity.}
-      \resumeItem{\textbf{Orchestrated containerized microservices deployments} on Linux/Azure and drove Agile delivery.}
+      \resumeItem{\textbf{Architected and optimized high-throughput distributed services} (C++/Go) handling \textbf{10+ TBs} of streaming data daily; engineered custom memory allocators and lock-free structures to reduce latency by \textbf{40\%}.}
+      \resumeItem{\textbf{Implemented robust fault-tolerance mechanisms} including circuit breakers and exponential backoff, ensuring \textbf{99.99\%} system availability and eliminating data loss during peak loads.}
+      \resumeItem{\textbf{Designed scalable ingestion pipelines} and storage layers; optimized I/O patterns to increase throughput by \textbf{3x} and reduced storage costs by \textbf{25\%} via efficient data validation.}
+      \resumeItem{\textbf{Enhanced system observability} with distributed tracing and structured logging; developed internal CLI tools that automated recovery, reducing MTTR by \textbf{50\%} and boosting velocity.}
+      \resumeItem{\textbf{Orchestrated containerized microservices deployments} on Linux/Azure, accelerating release cycles by \textbf{20\%} via Agile delivery.}
     \resumeItemListEnd
 
   \resumeSubheading
