ATS repetition solved

--- a/experience.tex
+++ b/experience.tex
@@ -5,8 +5,8 @@
     {Software Engineer 1}{July 2023 -- Present}
     \resumeItemListStart
       \resumeItem{\textbf{Architected and optimized high-throughput distributed services} (C++/Go) handling \textbf{10+ TBs} of streaming data daily; engineered custom memory allocators and lock-free structures to reduce latency by \textbf{40\%}.}
-      \resumeItem{\textbf{Implemented robust fault-tolerance mechanisms} including circuit breakers and exponential backoff, ensuring \textbf{99.99\%} system availability and eliminating data loss during peak loads.}
-      \resumeItem{\textbf{Designed scalable ingestion pipelines} and storage layers; optimized I/O patterns to increase throughput by \textbf{3x} and reduced storage costs by \textbf{25\%} via efficient data validation.}
+      \resumeItem{\textbf{Established robust fault-tolerance mechanisms} including circuit breakers and exponential backoff, ensuring \textbf{99.99\%} system availability and eliminating data loss during peak loads.}
+      \resumeItem{\textbf{Built scalable ingestion pipelines} and storage layers; tuned I/O patterns to increase throughput by \textbf{3x} and reduced storage costs by \textbf{25\%} via efficient data validation.}
       \resumeItem{\textbf{Enhanced system observability} with distributed tracing and structured logging; developed internal CLI tools that automated recovery, reducing MTTR by \textbf{50\%} and boosting velocity.}
       \resumeItem{\textbf{Orchestrated containerized microservices deployments} on Linux/Azure, accelerating release cycles by \textbf{20\%} via Agile delivery.}
     \resumeItemListEnd
@@ -15,7 +15,7 @@
     {Siemens Healthineers}{Bangalore, India}
     {Software Engineer Intern}{February 2023 -- July 2023}
     \resumeItemListStart
-      \resumeItem{Implemented \textbf{REST APIs} and data models in C\#; contributed to ingestion/validation modules and unit/integration tests.}
+      \resumeItem{Developed \textbf{REST APIs} and data models in C\#; contributed to ingestion/validation modules and unit/integration tests.}
       \resumeItem{Automated developer workflows and CI tasks; participated in \textbf{synchronous code/design reviews}, improving maintainability and on‑time delivery; achieved \textbf{60\%} process time savings.}
     \resumeItemListEnd
 
