--- a/projects.tex
+++ b/projects.tex
@@ -4,20 +4,20 @@
     {\textbf{High-Frequency Order Matching Engine} (\href{https://github.com/CodeWreckPro/Order-Matching-Engine}{Github}) $|$ \emph{C++, Docker, AWS}}{}
     \resumeItemListStart
       \resumeItem{Engineered a low-latency trading engine in \textbf{C++} using \textbf{lock-free data structures} and custom memory management to minimize GC pauses; achieved sub-millisecond execution times.}
-      \resumeItem{Designed \textbf{multithreaded} architecture for concurrent order processing; containerized with Docker for scalable deployment and implemented resilient network I/O with retry policies.}
+      \resumeItem{Devised \textbf{multithreaded} architecture for concurrent order processing; containerized with Docker for scalable deployment and integrated resilient network I/O with retry policies.}
     \resumeItemListEnd
 
   \resumeProjectHeading
     {\textbf{Secure Distributed Storage Utility} (\href{https://github.com/CodeWreckPro/AES_Encryption_and_Decryption_Script}{Github}) $|$ \emph{C++, Python, AES}}{}
     \resumeItemListStart
-      \resumeItem{Built a secure file storage utility incorporating \textbf{AES-256} encryption and block-level deduplication; implemented chunked file processing for handling large datasets efficiently.}
-      \resumeItem{Designed modular key management and robust error handling for data integrity; optimized byte-level I/O performance for high-throughput file operations.}
+      \resumeItem{Built a secure file storage utility incorporating \textbf{AES-256} encryption and block-level deduplication; constructed chunked file processing for handling large datasets efficiently.}
+      \resumeItem{Crafted modular key management and robust error handling for data integrity; refined byte-level I/O performance for high-throughput file operations.}
     \resumeItemListEnd
 
   \resumeProjectHeading
     {\textbf{EchoLens – Code Analysis Tool} (\href{https://codewreckpro.github.io/Echelons_Code_Analysis_Tool/}{Live} $|$ \href{https://github.com/CodeWreckPro/Echelons_Code_Analysis_Tool}{Github}) $|$ \emph{AI, ML, 3D Visualization}}{}
     \resumeItemListStart
-      \resumeItem{Created an AI‑powered platform that predicts risks, detects technical debt, and visualizes dependencies; implemented ML‑based hotspot prediction and semantic commit analysis.}
+      \resumeItem{Created an AI‑powered platform that predicts risks, detects technical debt, and visualizes dependencies; deployed ML‑based hotspot prediction and semantic commit analysis.}
       \resumeItem{Developed pipelines for repository analysis; contributed to \textbf{architecture/design reviews}; delivered dashboards to guide refactoring and evaluation workflows.}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
