--- a/skills.tex
+++ b/skills.tex
@@ -2,9 +2,9 @@
 \begin{itemize}[leftmargin=0.15in, label={}, itemsep=1pt, topsep=1pt, parsep=0pt, partopsep=0pt]
     \small{\item{
      \textbf{Languages}{: C++, Golang, C\#, Python, SQL, Bash, PowerShell, C, Java} \\
+     \textbf{Cloud \& Tools}{: Docker, Kubernetes, AWS/Azure, CI/CD, Linux/Windows, Agile/SDLC, System Design} \\
      \textbf{Distributed Systems}{: Consistency Models, Sharding, Replication, Consensus Protocols, Fault Tolerance, Microservices} \\
-     \textbf{Storage \& Data}{: File Systems (NFS/SMB), Object Storage, Deduplication, Data Protection, PostgreSQL, Redis} \\
-     \textbf{High Performance}{: Multithreading, Lock-free Data Structures, Async I/O, Memory Management, Profiling} \\
-     \textbf{Cloud \& Tools}{: Docker, Kubernetes, AWS/Azure, CI/CD, Linux/Windows, Agile/SDLC, System Design}
+     \textbf{Storage \& Data}{: PostgreSQL, Redis, File Systems (NFS/SMB), Object Storage, Deduplication, Data Protection} \\
+     \textbf{High Performance}{: Multithreading, Lock-free Data Structures, Async I/O, Memory Management, Profiling}
     }}
 \end{itemize}
