--- a/experience.tex
+++ b/experience.tex
@@ -4,11 +4,13 @@
     {Siemens Healthineers}{Bangalore, India}
     {Software Engineer 1}{July 2023 -- Present}
     \resumeItemListStart
-      \resumeItem{\textbf{Architected and optimized high-throughput distributed services} (C++/Go) handling \textbf{10+ TBs} of streaming data daily; engineered custom memory allocators and lock-free structures to reduce latency by \textbf{40\%}.}
-      \resumeItem{\textbf{Established robust fault-tolerance mechanisms} including circuit breakers and exponential backoff, ensuring \textbf{99.99\%} system availability and eliminating data loss during peak loads.}
-      \resumeItem{\textbf{Built scalable ingestion pipelines} and storage layers; tuned I/O patterns to increase throughput by \textbf{3x} and reduced storage costs by \textbf{25\%} via efficient data validation.}
-      \resumeItem{\textbf{Enhanced system observability} with distributed tracing and structured logging; developed internal CLI tools that automated recovery, reducing MTTR by \textbf{50\%} and boosting velocity.}
-      \resumeItem{\textbf{Orchestrated containerized microservices deployments} on Linux/Azure, accelerating release cycles by \textbf{20\%} via Agile delivery.}
+      \resumeItem{\textbf{Developed high-performance distributed microservices} in \textbf{C++} and \textbf{Go}; optimized concurrency and memory usage to reduce service latency by \textbf{25\%}.}
+      \resumeItem{\textbf{Implemented resilience patterns} like circuit breakers and retries, ensuring consistent system availability and data integrity under high load.}
+      \resumeItem{Enhanced data ingestion modules by \textbf{optimizing I/O buffer management}, increasing throughput by \textbf{40\%} for large datasets.}
+      \resumeItem{Integrated distributed tracing to \textbf{improve system observability and built CLI tools} that reduced debugging time for cross-functional teams.}
+      \resumeItem{\textbf{Supported containerized microservices} deployments on Linux/Azure and drove Agile delivery}
+      \resumeItem{\textbf{Integrated object storage} (\textbf{AWS S3}/\textbf{Azure Blob}) with multipart uploads and checksum validation; increased sustained ingest throughput by \textbf{35\%} and reduced transfer errors by \textbf{50\%}.}
+      \resumeItem{\textbf{Implemented idempotent ingestion handlers} with \textbf{retries/backoff} and deduplication keys to ensure reliable processing under failures; lowered duplicate processing by \textbf{90\%} and improved recovery robustness.}
     \resumeItemListEnd
 
   \resumeSubheading
@@ -16,13 +18,6 @@
     {Software Engineer Intern}{February 2023 -- July 2023}
     \resumeItemListStart
       \resumeItem{Developed \textbf{REST APIs} and data models in C\#; contributed to ingestion/validation modules and unit/integration tests.}
-      \resumeItem{Automated developer workflows and CI tasks; participated in \textbf{synchronous code/design reviews}, improving maintainability and on‑time delivery; achieved \textbf{60\%} process time savings.}
-    \resumeItemListEnd
-
-  \resumeSubheading
-    {Beneath-a-Tree}{India}
-    {Techno-Managerial STEM Internship}{February 2022 -- March 2022}
-    \resumeItemListStart
-      \resumeItem{As a team of 4 STEM Trainers in Rural Gujarat for the STEM for Girls initiative, sparking interest in science and research. Planned events, communicated interculturally, and managed resources, logistics and execution.}
+      \resumeItem{Automated developer workflows and CI tasks; participated in \textbf{synchronous code/design reviews}, improving maintainability and on‑time delivery; achieved \textbf{60\%} process time savings. Adhered to \textbf{Agile} Methadology.}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
