Capillary technologies SDE2 Java

--- a/skills.tex
+++ b/skills.tex
@@ -1,7 +1,7 @@
 \section{Skills}
 \begin{itemize}[leftmargin=0.15in, label={}, itemsep=1pt, topsep=1pt, parsep=0pt, partopsep=0pt]
     \small{\item{
-     \textbf{Languages}{: C++, Golang, C\#, Python, SQL, Bash, PowerShell, C, Java} \\
+     \textbf{Languages}{: Java, C++, Golang, C\#, Python, SQL, Bash, PowerShell, C} \\
      \textbf{Cloud \& Tools}{: Docker, Kubernetes, AWS/Azure, CI/CD, Linux/Windows, Agile/SDLC, System Design} \\
      \textbf{Distributed Systems}{: Consistency Models, Sharding, Replication, Consensus Protocols, Fault Tolerance, Microservices} \\
      \textbf{Storage \& Data}{: PostgreSQL, Redis, File Systems (NFS/SMB), Object Storage, Deduplication, Data Protection} \\
