--- a/summary.tex
+++ b/summary.tex
@@ -1,2 +1,2 @@
 \section{Summary}
-Software Engineer specializing in \textbf{Distributed Systems}, \textbf{Data Protection}, and \textbf{High-Performance Infrastructure}. Proficient in \textbf{C++}, \textbf{Golang}, and \textbf{C\#}, with deep experience in building scalable storage services and streaming data pipelines. Expert in multithreading, asynchronous I/O, and resilient system design (circuit breakers, consistency models). Strong background in systems programming, file system concepts, and cloud-native architectures. Deploys reliably across Linux/Windows, Docker, Kubernetes, and Cloud platforms.
+Software Engineer focused on \textbf{large-scale distributed systems}, \textbf{data security}, and \textbf{storage} for \textbf{multi‑tenant SaaS}. Strong in \textbf{C++}, \textbf{Golang}, and \textbf{Java}; experienced with \textbf{object storage} (S3/Azure Blob) and \textbf{filesystem concepts} (NFS/SMB). Implements \textbf{deduplication}, \textbf{compression}, \textbf{replication}, and snapshot-like retention in data pipelines aligned with web-scale architectures. Skilled in \textbf{concurrency}, \textbf{async I/O}, \textbf{fault tolerance} (retries/backoff, idempotency), \textbf{consensus fundamentals}, and \textbf{performance optimization}. Delivers \textbf{test-driven}, resilient microservices across on‑prem and cloud (\textbf{Docker}, \textbf{Kubernetes}, \textbf{AWS/Azure}) with strong observability.
