--- a/experience.tex
+++ b/experience.tex
@@ -4,10 +4,10 @@
     {Siemens Healthineers}{Bangalore, India}
     {Software Engineer 1}{July 2023 -- Present}
     \resumeItemListStart
-      \resumeItem{\textbf{Developed high-performance distributed microservices} in \textbf{C++} and \textbf{Go}; optimized concurrency and memory usage to reduce service latency by \textbf{25\%}.}
+      \resumeItem{\textbf{Built high-performance microservices} in \textbf{C++}/\textbf{Go} interoperating with \textbf{Java} services; optimized concurrency and memory to lower latency by \textbf{25\%}.}
       \resumeItem{\textbf{Implemented resilience patterns} like circuit breakers and retries, ensuring consistent system availability and data integrity under high load.}
-      \resumeItem{Enhanced data ingestion modules by \textbf{optimizing I/O buffer management}, increasing throughput by \textbf{40\%} for large datasets.}
-      \resumeItem{Integrated distributed tracing to \textbf{improve system observability and built CLI tools} that reduced debugging time for cross-functional teams.}
+      \resumeItem{\textbf{Enhanced multi-tenant data path} with \textbf{MySQL} tuning and \textbf{Redis} caching; increased throughput by \textbf{40\%} for large datasets.}
+      \resumeItem{\textbf{Integrated distributed tracing} and built CLI tools to cut debugging time; \textbf{mentored} junior engineers on profiling and incident response.}
       \resumeItem{\textbf{Supported containerized microservices} deployments on Linux/Azure and drove Agile delivery}
       \resumeItem{\textbf{Integrated object storage} (\textbf{AWS S3}/\textbf{Azure Blob}) with multipart uploads and checksum validation; increased sustained ingest throughput by \textbf{35\%} and reduced transfer errors by \textbf{50\%}.}
       \resumeItem{\textbf{Implemented idempotent ingestion handlers} with \textbf{retries/backoff} and deduplication keys to ensure reliable processing under failures; lowered duplicate processing by \textbf{90\%} and improved recovery robustness.}
@@ -17,7 +17,7 @@
     {Siemens Healthineers}{Bangalore, India}
     {Software Engineer Intern}{February 2023 -- July 2023}
     \resumeItemListStart
-      \resumeItem{Developed \textbf{REST APIs} and data models in C\#; contributed to ingestion/validation modules and unit/integration tests.}
-      \resumeItem{Automated developer workflows and CI tasks; participated in \textbf{synchronous code/design reviews}, improving maintainability and on‑time delivery; achieved \textbf{60\%} process time savings. Adhered to \textbf{Agile} Methadology.}
+      \resumeItem{Developed \textbf{REST APIs} and data models (C\#) with \textbf{MySQL}/\textbf{Redis}; contributed to ingestion/validation modules and unit/integration tests.}
+      \resumeItem{Automated developer workflows and CI tasks; participated in \textbf{code/design reviews}; achieved \textbf{60\%} process time savings and \textbf{mentored} interns; adhered to \textbf{Agile} methodology.}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
