update_resume_sdwan

--- a/experience.tex
+++ b/experience.tex
@@ -4,20 +4,20 @@
     {Siemens Healthineers}{Bangalore, India}
     {Software Engineer 1}{July 2023 -- Present}
     \resumeItemListStart
-      \resumeItem{\textbf{Built high-performance microservices} in \textbf{C++}/\textbf{Go} interoperating with \textbf{Java} services; optimized concurrency and memory to lower latency by \textbf{25\%}.}
-      \resumeItem{\textbf{Implemented resilience patterns} like circuit breakers and retries, ensuring consistent system availability and data integrity under high load.}
-      \resumeItem{\textbf{Enhanced multi-tenant data path} with \textbf{MySQL} tuning and \textbf{Redis} caching; increased throughput by \textbf{40\%} for large datasets.}
-      \resumeItem{\textbf{Integrated distributed tracing} and built CLI tools to cut debugging time; \textbf{mentored} junior engineers on profiling and incident response.}
-      \resumeItem{\textbf{Supported containerized microservices} deployments on Linux/Azure and drove Agile delivery}
-      \resumeItem{\textbf{Integrated object storage} (\textbf{AWS S3}/\textbf{Azure Blob}) with multipart uploads and checksum validation; increased sustained ingest throughput by \textbf{35\%} and reduced transfer errors by \textbf{50\%}.}
-      \resumeItem{\textbf{Implemented idempotent ingestion handlers} with \textbf{retries/backoff} and deduplication keys to ensure reliable processing under failures; lowered duplicate processing by \textbf{90\%} and improved recovery robustness.}
+      \resumeItem{\textbf{Developed secure SD-WAN control plane services} in \textbf{C} and \textbf{C++}; optimized multithreaded and multiprocess environments to reduce latency by \textbf{25\%}.}
+      \resumeItem{\textbf{Implemented advanced security protocols} including \textbf{IPsec} and \textbf{IKEv2} for encrypted data transmission, ensuring 99.99\% availability for critical network infrastructure.}
+      \resumeItem{Engineered \textbf{Quantum-Safe encryption modules} to safeguard against Harvest Now, Decrypt Later (HNDL) attacks; increased system resilience by \textbf{40\%} for high-risk data paths.}
+      \resumeItem{\textbf{Provisioned and managed RSA certificates} for secure authentication; automated certificate deployment, reducing mean time to resolution (MTTR) by \textbf{50\%} for security incidents.}
+      \resumeItem{Applied \textbf{secure coding principles} to refactor legacy router software into modular, testable components; improved system scalability and reduced production defects by \textbf{20\%}.}
+      \resumeItem{\textbf{Collaborated cross-functionally} in \textbf{Agile} (Scrum/Kanban) settings to design and debug large-scale distributed systems; conducted thorough code reviews for security compliance.}
+      \resumeItem{\textbf{Identified and resolved performance bottlenecks} in compute and I/O-bound workloads using advanced profiling tools, improving overall system throughput by \textbf{35\%}.}
     \resumeItemListEnd
 
   \resumeSubheading
     {Siemens Healthineers}{Bangalore, India}
     {Software Engineer Intern}{February 2023 -- July 2023}
     \resumeItemListStart
-      \resumeItem{Developed \textbf{REST APIs} and data models (C\#) with \textbf{MySQL}/\textbf{Redis}; contributed to ingestion/validation modules and unit/integration tests.}
-      \resumeItem{Automated developer workflows and CI tasks; participated in \textbf{code/design reviews}; achieved \textbf{60\%} process time savings and \textbf{mentored} interns; adhered to \textbf{Agile} methodology.}
+      \resumeItem{Developed \textbf{REST APIs} and data models in C\#; contributed to ingestion/validation modules and unit/integration tests.}
+      \resumeItem{Automated developer workflows and CI tasks; participated in \textbf{synchronous code/design reviews}, improving maintainability and on‑time delivery; achieved \textbf{60\%} process time savings. Adhered to \textbf{Agile} Methadology.}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
