--- a/projects.tex
+++ b/projects.tex
@@ -1,23 +1,23 @@
 \section{Projects}
 \resumeSubHeadingListStart
   \resumeProjectHeading
-    {\textbf{High-Frequency Order Matching Engine} (\href{https://github.com/CodeWreckPro/Order-Matching-Engine}{Github}) $|$ \emph{C++, Docker, AWS}}{}
+    {\textbf{Secure SD-WAN Control Plane Engine} (\href{https://github.com/CodeWreckPro/Order-Matching-Engine}{Repo}) $|$ \emph{C/C++, UNIX, Multithreading}}{}
     \resumeItemListStart
-      \resumeItem{Engineered a low-latency trading engine in \textbf{C++} using \textbf{lock-free data structures} and custom memory management to minimize GC pauses; achieved sub-millisecond execution times.}
-      \resumeItem{Devised \textbf{multithreaded} architecture for concurrent order processing; containerized with Docker for scalable deployment and integrated resilient network I/O with retry policies.}
+      \resumeItem{Implemented high-performance routing services in C++ using \textbf{lock-free data structures} and multithreading for concurrent packet processing; optimized for resource-constrained environments.}
+      \resumeItem{Designed resilient control plane logic with \textbf{retry/backoff} mechanisms for secure communication; containerized using Docker for scalable deployment across distributed systems.}
     \resumeItemListEnd
 
   \resumeProjectHeading
-    {\textbf{Secure Distributed Storage Utility} (\href{https://github.com/CodeWreckPro/AES_Encryption_and_Decryption_Script}{Github}) $|$ \emph{C++, Python, AES}}{}
+    {\textbf{Network Security Audit Tool} (\href{https://codewreckpro.github.io/Echelons_Code_Analysis_Tool/}{Live} $|$ \href{https://github.com/CodeWreckPro/Echelons_Code_Analysis_Tool}{Repo}) $|$ \emph{AI, Python, Security Visualization}}{}
     \resumeItemListStart
-      \resumeItem{Built a secure file storage utility incorporating \textbf{AES-256} encryption and block-level deduplication; constructed chunked file processing for handling large datasets efficiently.}
-      \resumeItem{Crafted modular key management and robust error handling for data integrity; refined byte-level I/O performance for high-throughput file operations.}
+      \resumeItem{Developed an AI-powered platform to identify \textbf{vulnerabilities}, technical debt, and security risks in large-scale codebases; implemented semantic commit analysis to track security compliance.}
+      \resumeItem{Visualized complex system dependencies to guide refactoring and evaluation workflows; contributed to \textbf{architecture and design reviews} for secure software development life cycles (SDLC).}
     \resumeItemListEnd
 
   \resumeProjectHeading
-    {\textbf{EchoLens – Code Analysis Tool} (\href{https://codewreckpro.github.io/Echelons_Code_Analysis_Tool/}{Live} $|$ \href{https://github.com/CodeWreckPro/Echelons_Code_Analysis_Tool}{Github}) $|$ \emph{AI, ML, 3D Visualization}}{}
+    {\textbf{IPsec Tunnel Encryption Utility} (\href{https://github.com/CodeWreckPro/AES_Encryption_and_Decryption_Script}{Repo}) $|$ \emph{Python, AES, Secure Coding}}{}
     \resumeItemListStart
-      \resumeItem{Created an AI‑powered platform that predicts risks, detects technical debt, and visualizes dependencies; deployed ML‑based hotspot prediction and semantic commit analysis.}
-      \resumeItem{Developed pipelines for repository analysis; contributed to \textbf{architecture/design reviews}; delivered dashboards to guide refactoring and evaluation workflows.}
+      \resumeItem{Implemented \textbf{AES/CBC} encryption with PKCS\#7 padding for secure data transmission; designed modular key management and robust error handling to prevent decryption failures.}
+      \resumeItem{Applied \textbf{secure coding standards} to build a CLI utility for cryptographic operations; optimized byte-level performance for real-time encryption and decryption tasks.}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
