--- a/skills.tex
+++ b/skills.tex
@@ -1,10 +1,10 @@
 \section{Skills}
 \begin{itemize}[leftmargin=0.15in, label={}, itemsep=1pt, topsep=1pt, parsep=0pt, partopsep=0pt]
     \small{\item{
-     \textbf{Languages}{: Java, C++, Golang, C\#, Python, SQL, Bash, PowerShell, C} \\
-     \textbf{Cloud \& Tools}{: Docker, Kubernetes, AWS/Azure, CI/CD, Linux/Windows, Agile/SDLC, System Design} \\
-     \textbf{Distributed Systems}{: Consistency Models, Sharding, Replication, Consensus Protocols, Fault Tolerance, Microservices} \\
-     \textbf{Storage \& Data}{: PostgreSQL, Redis, File Systems (NFS/SMB), Object Storage, Deduplication, Data Protection} \\
-     \textbf{High Performance}{: Multithreading, Lock-free Data Structures, Async I/O, Memory Management, Profiling}
+     \textbf{Languages}{: C, C++, Golang, Python, Bash, SQL, C\#, Java} \\
+     \textbf{Networking \& Security}{: VPN, SD-WAN (Catalyst), IPsec, IKEv2, RSA, Post-Quantum Cryptography (PQC), QKD, SSL/TLS} \\
+     \textbf{Core Systems}{: UNIX, IOS, Multithreading, Multiprocessing, Distributed Systems, Microservices, High-Availability} \\
+     \textbf{Optimization}{: Async I/O, Lock-free Data Structures, Memory Management, Performance Profiling, Real-time Systems} \\
+     \textbf{Tools \& Practices}{: Secure Coding, Agile (Scrum/Kanban), Git, CI/CD, Docker, Kubernetes, AWS/Azure, AI-Assisted Dev}
     }}
 \end{itemize}
