--- a/summary.tex
+++ b/summary.tex
@@ -1,2 +1,2 @@
 \section{Summary}
-Software Engineer focused on \textbf{large-scale distributed systems}, \textbf{data security}, and \textbf{storage} for \textbf{multi‑tenant SaaS}. Strong in \textbf{C++}, \textbf{Golang}, and \textbf{Java}; experienced with \textbf{object storage} (S3/Azure Blob) and \textbf{filesystem concepts} (NFS/SMB). Implements \textbf{deduplication}, \textbf{compression}, \textbf{replication}, and snapshot-like retention in data pipelines aligned with web-scale architectures. Skilled in \textbf{concurrency}, \textbf{async I/O}, \textbf{fault tolerance} (retries/backoff, idempotency), \textbf{consensus fundamentals}, and \textbf{performance optimization}. Delivers \textbf{test-driven}, resilient microservices across on‑prem and cloud (\textbf{Docker}, \textbf{Kubernetes}, \textbf{AWS/Azure}) with strong observability.
+SD-WAN Security Software Engineer specializing in \textbf{VPN}, \textbf{IPsec}, and \textbf{IKEv2} protocol development for high-performance networking solutions. Proficient in \textbf{C} and \textbf{C++} within \textbf{UNIX/IOS} multithreading and multiprocessing environments. Experienced in designing, building, and debugging \textbf{large-scale distributed systems} with a focus on \textbf{Post-Quantum Cryptography (PQC)} and \textbf{Quantum-Safe} encryption to protect against HNDL attacks. Skilled in \textbf{RSA certificate} authentication, secure data transmission, and optimizing \textbf{SD-WAN} architectures for multicloud and SaaS. Strong problem-solving background in identifying and resolving complex vulnerabilities in critical infrastructure.
